Fix center layout issue

--- a/assets/styles/_overrides.scss
+++ b/assets/styles/_overrides.scss
@@ -266,6 +266,10 @@ body {
   flex: 1;
 }
 
+._default__main__nuxt {
+  padding: 2rem 0;
+}
+
 // layouts/error.vue
 ._center_view {
   height: 100vh;
